# feup-cal-proj

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  report.bib  report_delivery1.tex
.github/workflows/: build.yml  main.yml  reports.yml  test.yml  zip.yml
algorithms/: makefile
algorithms/include/: Astar.h  ClosestPoint.h  DFS.h  Dijkstra.h  FloydWarshall.h  HeldKarp.h  Kosaraju.h  KosarajuV.h  NearestNeighbour.h  Reachability.h  SCC.h  SCCnode.h  ShortestPath.h  ShortestPathAll.h  ShortestPathOneMany.h  Tarjan.h  TravellingSalesman.h  VStripes.h
algorithms/src/: Astar.cpp  ClosestPoint.cpp  Dijkstra.cpp  HeldKarp.cpp  NearestNeighbour.cpp  Reachability.cpp  SCCnode.cpp  ShortestPathAll.cpp  ShortestPathOneMany.cpp  Tarjan.cpp  TravellingSalesman.cpp  VStripes.cpp
doc/report1/: compile_report1.sh  conclusion.tex  introduction.tex  problem-decomposition.tex  problem-formalization.tex  report.bib  report_delivery1.tex  theme-description.tex  theoretical-notions.tex  use-cases.tex
doc/report1/algorithmic-problems/: algorithmic-problems.tex
doc/report1/algorithmic-problems/bridges/: bridges.tex  tarjan-bridges.tex
doc/report1/algorithmic-problems/closest-point/: closestpoint.tex  vstripes.tex
doc/report1/algorithmic-problems/reachability/: dfs.tex  reachability.tex
doc/report1/algorithmic-problems/scc/: dcsc.tex  korasaju.tex  kosaraju-v.tex  kosaraju.tex  scc.tex  tarjan.tex
doc/report1/algorithmic-problems/shortest-path/: astar.tex  dijkstra.tex  floyd-warshall.tex  shortest-path.tex
doc/report1/algorithmic-problems/tsp/: christofides.tex  held-karp.tex  nearest-neighbour.tex  tsp.tex  tsproblem.tex
doc/report1/algorithmic-problems/vrp/: simulated-annealing.tex  vrp-advanced.tex  vrp-optimal.tex  vrp-simple-heuristic.tex  vrp.tex
doc/report2/: .latexmkrc  algorithmic-problems  algorithms-implemented.tex  appendix-fileformat.tex  compile_report2.sh  conclusion.tex  connectivity-graphs.tex  data-structures.tex  empirical.tex  implemented-use-cases.tex  introduction.tex  iterations.tex  problem-decomposition.tex  problem-formalization.tex  report.bib  report_delivery2.synctex(busy)  report_delivery2.tex  theoretical-notions.tex  use-cases.tex
empirical/: GraphGenerator  makefile
empirical/include/: GraphGenerator.h  PointGenerator.h
empirical/src/: GraphGenerator.cpp  main.cpp
include/: Astar.h  Client.h  DFS.h  DUGraph.h  DWGraph.h  Dijkstra.h  EdgeType.h  FloydWarshall.h  InterestingNode.h  Iteration.h  Iteration1.h  Iteration2.h  Kosaraju.h  KosarajuV.h  MapGraph.h  MapViewer.h  NN.h  Ride.h  RoutingHeuristic.h  SCC.h  SCCnode.h  ShortestPath.h  ShortestPathAll.h  ShortestPathFromOneMany.h  ShortestPathOneMany.h  TravellingSalesman.h  Van.h  VehicleRouting.h  coord.h  point.h  shared_queue.h  statistics.h
map/: CMakeLists.txt  makefile  map_process.cpp
resources/: README.md  client_generator.h  clients.txt  generator  generator.cpp  generator.h  interesting_nodes.txt  it1_01.clients  it1_02.clients  it1_03.clients  it2_01.clients  it2_01.vans  it2_02.clients  main.cpp  makefile  vans_1.txt  vans_1.vans  vans_2.txt  vans_2.vans
resources/include/: input_generator.h
resources/src/: input_generator.cpp
src/: Astar.cpp  Client.cpp  DFS.cpp  DUGraph.cpp  DWGraph.cpp  Dijkstra.cpp  FloydWarshall.cpp  Iteration.cpp  Iteration1.cpp  Iteration2.cpp  Kosaraju.cpp  KosarajuV.cpp  MapGraph.cpp  MapViewer.cpp  NN.cpp  Ride.cpp  RoutingHeuristic.cpp  ShortestPath.cpp  ShortestPathAll.cpp  ShortestPathFromOneMany.cpp  ShortestPathOneMany.cpp  Van.cpp  VehicleRouting.cpp  coord.cpp  main.cpp
structures/: makefile
structures/include/: DUGraph.h  DWGraph.h  EdgeType.h  coord.h  point.h
structures/src/: DUGraph.cpp  DWGraph.cpp  coord.cpp  point.cpp
test/: test.cpp
